2016-02-05  kitone  <kitone@gna.org>

	* src/subtitleview.cc:
	* src/utility.h:
	Fix bug #23714 : Explicit cast. patch by Philip Rinn <rinni>

2016-02-03  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/changeframerate.cc:
	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	Fix bug #24302 : FPS Field in change Framerate dialog not editable anymore. Port to gtk3 and fix regression.

2015-07-29  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking.ui:
	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	Fix bug #23727 : Error Checking should close on pressing Escape.

2015-07-28  kitone  <kitone@gna.org>

	* plugins/actions/movesubtitles/movesubtitles.cc:
	Fix bug #23718 : Move plugin should remember the checkbox to only move selected.

2015-07-28  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/dialog-error-checking-preferences.ui:
	Fix bug #23706 : Error checking preferences should be the same in preferences and error checking.. (Patch by Tomáš Hnyk)

2015-07-28  kitone  <kitone@gna.org>

	* configure.ac:
	Switching back to development version.

2015-06-25  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.52.1 release.

2015-06-25  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/Makefile.am:
	Fix bug #23662 : Subtitleeditor 0.52.0 "errorcheckingplugin.cc:32:36: fatal error: mincharacterspersecond.h: No such file or directory".

2015-06-24  kitone  <kitone@gna.org>

	* NEWS:
	* configure.ac:
	Preparing 0.52.0 release.

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/styleeditor/dialog-style-editor.ui:
	Fix bug #23470 : Style editor does not permit margins to go over 100 and other problems. (Patch by Tomáš Hnyk)

2015-06-24  kitone  <kitone@gna.org>

	* plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui:
	Fix bug #23660 : Keyboard shortcuts window is to small by default. (Patch by Tomáš Hnyk)

2015-06-21  kitone  <kitone@gna.org>
